PPL/src/main/mt22/checker/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'while'", "'void'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'array'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'::'", "'('", "')'", "'['", 
                     "']'", "'.'", "','", "';'", "':'", "'{'", "'}'", "'='" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BRK", "BOOL", "DO", "ELSE", 
                      "FALSE", "FLOAT", "FOR", "FUNC", "IF", "INT", "RTN", 
                      "STRING", "TRUE", "WHILE", "VOID", "OUT", "CONT", 
                      "OF", "INHERIT", "ARR", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "NOT", "AND", "OR", "EQ", "IEQ", "LESS", "LEQ", 
                      "GREATER", "GEQ", "CONCAT", "LC", "RC", "LS", "RS", 
                      "DOT", "COMMA", "SEMI", "COLON", "LB", "RB", "ASSN", 
                      "ACMT", "CMT", "INTNUM", "FLOATNUM", "STR", "ID", 
                      "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_outfunc = 1
    RULE_stmtlist = 2
    RULE_stmt = 3
    RULE_ty_pe = 4
    RULE_atmtype = 5
    RULE_functype = 6
    RULE_idlist = 7
    RULE_arrtype = 8
    RULE_dimen = 9
    RULE_arridx = 10
    RULE_arrele = 11
    RULE_vardclr = 12
    RULE_varnoini = 13
    RULE_varini = 14
    RULE_funcdclr = 15
    RULE_funcproto = 16
    RULE_paramlist = 17
    RULE_param = 18
    RULE_funccall = 19
    RULE_arglist = 20
    RULE_explistskipable = 21
    RULE_explist = 22
    RULE_exp = 23
    RULE_exp_1 = 24
    RULE_exp_2 = 25
    RULE_exp_3 = 26
    RULE_exp_4 = 27
    RULE_exp_5 = 28
    RULE_exp_6 = 29
    RULE_exp_7 = 30
    RULE_blkstmt = 31
    RULE_assnstmt = 32
    RULE_ifstmt = 33
    RULE_forstmt = 34
    RULE_whilestmt = 35
    RULE_dowhstmt = 36
    RULE_brkstmt = 37
    RULE_contstmt = 38
    RULE_rtnstmt = 39
    RULE_callstmt = 40

    ruleNames =  [ "program", "outfunc", "stmtlist", "stmt", "ty_pe", "atmtype", 
                   "functype", "idlist", "arrtype", "dimen", "arridx", "arrele", 
                   "vardclr", "varnoini", "varini", "funcdclr", "funcproto", 
                   "paramlist", "param", "funccall", "arglist", "explistskipable", 
                   "explist", "exp", "exp_1", "exp_2", "exp_3", "exp_4", 
                   "exp_5", "exp_6", "exp_7", "blkstmt", "assnstmt", "ifstmt", 
                   "forstmt", "whilestmt", "dowhstmt", "brkstmt", "contstmt", 
                   "rtnstmt", "callstmt" ]

    EOF = Token.EOF
    AUTO=1
    BRK=2
    BOOL=3
    DO=4
    ELSE=5
    FALSE=6
    FLOAT=7
    FOR=8
    FUNC=9
    IF=10
    INT=11
    RTN=12
    STRING=13
    TRUE=14
    WHILE=15
    VOID=16
    OUT=17
    CONT=18
    OF=19
    INHERIT=20
    ARR=21
    ADD=22
    SUB=23
    MUL=24
    DIV=25
    MOD=26
    NOT=27
    AND=28
    OR=29
    EQ=30
    IEQ=31
    LESS=32
    LEQ=33
    GREATER=34
    GEQ=35
    CONCAT=36
    LC=37
    RC=38
    LS=39
    RS=40
    DOT=41
    COMMA=42
    SEMI=43
    COLON=44
    LB=45
    RB=46
    ASSN=47
    ACMT=48
    CMT=49
    INTNUM=50
    FLOATNUM=51
    STR=52
    ID=53
    WS=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56
    ERROR_CHAR=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def outfunc(self):
            return self.getTypedRuleContext(MT22Parser.OutfuncContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.outfunc()
                self.state = 83
                self.match(MT22Parser.EOF)
                pass
            elif token in [MT22Parser.EOF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.match(MT22Parser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutfuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def outfunc(self):
            return self.getTypedRuleContext(MT22Parser.OutfuncContext,0)


        def vardclr(self):
            return self.getTypedRuleContext(MT22Parser.VardclrContext,0)


        def assnstmt(self):
            return self.getTypedRuleContext(MT22Parser.AssnstmtContext,0)


        def funcdclr(self):
            return self.getTypedRuleContext(MT22Parser.FuncdclrContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_outfunc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutfunc" ):
                return visitor.visitOutfunc(self)
            else:
                return visitor.visitChildren(self)




    def outfunc(self):

        localctx = MT22Parser.OutfuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_outfunc)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 88
                    self.vardclr()
                    pass

                elif la_ == 2:
                    self.state = 89
                    self.assnstmt()
                    pass

                elif la_ == 3:
                    self.state = 90
                    self.funcdclr()
                    pass


                self.state = 93
                self.outfunc()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 95
                    self.vardclr()
                    pass

                elif la_ == 2:
                    self.state = 96
                    self.assnstmt()
                    pass

                elif la_ == 3:
                    self.state = 97
                    self.funcdclr()
                    pass


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(MT22Parser.StmtContext,0)


        def stmtlist(self):
            return self.getTypedRuleContext(MT22Parser.StmtlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_stmtlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtlist" ):
                return visitor.visitStmtlist(self)
            else:
                return visitor.visitChildren(self)




    def stmtlist(self):

        localctx = MT22Parser.StmtlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmtlist)
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.stmt()
                self.state = 103
                self.stmtlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardclr(self):
            return self.getTypedRuleContext(MT22Parser.VardclrContext,0)


        def assnstmt(self):
            return self.getTypedRuleContext(MT22Parser.AssnstmtContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(MT22Parser.IfstmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(MT22Parser.ForstmtContext,0)


        def whilestmt(self):
            return self.getTypedRuleContext(MT22Parser.WhilestmtContext,0)


        def dowhstmt(self):
            return self.getTypedRuleContext(MT22Parser.DowhstmtContext,0)


        def brkstmt(self):
            return self.getTypedRuleContext(MT22Parser.BrkstmtContext,0)


        def contstmt(self):
            return self.getTypedRuleContext(MT22Parser.ContstmtContext,0)


        def rtnstmt(self):
            return self.getTypedRuleContext(MT22Parser.RtnstmtContext,0)


        def callstmt(self):
            return self.getTypedRuleContext(MT22Parser.CallstmtContext,0)


        def blkstmt(self):
            return self.getTypedRuleContext(MT22Parser.BlkstmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = MT22Parser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stmt)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.vardclr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.assnstmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.ifstmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.forstmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 112
                self.whilestmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 113
                self.dowhstmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 114
                self.brkstmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 115
                self.contstmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 116
                self.rtnstmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 117
                self.callstmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 118
                self.blkstmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ty_peContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(MT22Parser.BOOL, 0)

        def INT(self):
            return self.getToken(MT22Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def arrtype(self):
            return self.getTypedRuleContext(MT22Parser.ArrtypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_ty_pe

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTy_pe" ):
                return visitor.visitTy_pe(self)
            else:
                return visitor.visitChildren(self)




    def ty_pe(self):

        localctx = MT22Parser.Ty_peContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ty_pe)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.match(MT22Parser.BOOL)
                pass
            elif token in [MT22Parser.INT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.match(MT22Parser.INT)
                pass
            elif token in [MT22Parser.FLOAT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 123
                self.match(MT22Parser.FLOAT)
                pass
            elif token in [MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 124
                self.match(MT22Parser.STRING)
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 5)
                self.state = 125
                self.match(MT22Parser.AUTO)
                pass
            elif token in [MT22Parser.ARR]:
                self.enterOuterAlt(localctx, 6)
                self.state = 126
                self.arrtype()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtmtypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(MT22Parser.BOOL, 0)

        def INT(self):
            return self.getToken(MT22Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atmtype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtmtype" ):
                return visitor.visitAtmtype(self)
            else:
                return visitor.visitChildren(self)




    def atmtype(self):

        localctx = MT22Parser.AtmtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_atmtype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOL) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INT) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(MT22Parser.BOOL, 0)

        def INT(self):
            return self.getToken(MT22Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def arrtype(self):
            return self.getTypedRuleContext(MT22Parser.ArrtypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_functype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctype" ):
                return visitor.visitFunctype(self)
            else:
                return visitor.visitChildren(self)




    def functype(self):

        localctx = MT22Parser.FunctypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functype)
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.match(MT22Parser.BOOL)
                pass
            elif token in [MT22Parser.INT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(MT22Parser.INT)
                pass
            elif token in [MT22Parser.FLOAT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.match(MT22Parser.FLOAT)
                pass
            elif token in [MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 134
                self.match(MT22Parser.STRING)
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 5)
                self.state = 135
                self.match(MT22Parser.AUTO)
                pass
            elif token in [MT22Parser.VOID]:
                self.enterOuterAlt(localctx, 6)
                self.state = 136
                self.match(MT22Parser.VOID)
                pass
            elif token in [MT22Parser.ARR]:
                self.enterOuterAlt(localctx, 7)
                self.state = 137
                self.arrtype()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_idlist)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.match(MT22Parser.ID)

                self.state = 141
                self.match(MT22Parser.COMMA)
                self.state = 142
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrtypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARR(self):
            return self.getToken(MT22Parser.ARR, 0)

        def LS(self):
            return self.getToken(MT22Parser.LS, 0)

        def dimen(self):
            return self.getTypedRuleContext(MT22Parser.DimenContext,0)


        def RS(self):
            return self.getToken(MT22Parser.RS, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def atmtype(self):
            return self.getTypedRuleContext(MT22Parser.AtmtypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arrtype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrtype" ):
                return visitor.visitArrtype(self)
            else:
                return visitor.visitChildren(self)




    def arrtype(self):

        localctx = MT22Parser.ArrtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arrtype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(MT22Parser.ARR)
            self.state = 147
            self.match(MT22Parser.LS)
            self.state = 148
            self.dimen()
            self.state = 149
            self.match(MT22Parser.RS)
            self.state = 150
            self.match(MT22Parser.OF)
            self.state = 151
            self.atmtype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTNUM(self):
            return self.getToken(MT22Parser.INTNUM, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def dimen(self):
            return self.getTypedRuleContext(MT22Parser.DimenContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimen

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimen" ):
                return visitor.visitDimen(self)
            else:
                return visitor.visitChildren(self)




    def dimen(self):

        localctx = MT22Parser.DimenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_dimen)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.match(MT22Parser.INTNUM)

                self.state = 154
                self.match(MT22Parser.COMMA)
                self.state = 155
                self.dimen()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.match(MT22Parser.INTNUM)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArridxContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def LS(self):
            return self.getToken(MT22Parser.LS, 0)

        def explist(self):
            return self.getTypedRuleContext(MT22Parser.ExplistContext,0)


        def RS(self):
            return self.getToken(MT22Parser.RS, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arridx

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArridx" ):
                return visitor.visitArridx(self)
            else:
                return visitor.visitChildren(self)




    def arridx(self):

        localctx = MT22Parser.ArridxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arridx)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(MT22Parser.ID)
            self.state = 160
            self.match(MT22Parser.LS)
            self.state = 161
            self.explist()
            self.state = 162
            self.match(MT22Parser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArreleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
